created Kafka and RabbitMq Listeneres, started working on testing

--- a/MessagesHandlerService/MessagesHandlerService.csproj
+++ b/MessagesHandlerService/MessagesHandlerService.csproj
@@ -11,8 +11,18 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.5.3" />
+    <PackageReference Include="Docker.DotNet" Version="3.125.15" />
+    <PackageReference Include="farlee2121.System.CommandLine.PropertyMapBinder.NameConventionBinder" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
+	
+  	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
